@@ -1,3 +1,5 @@
+* deprecation extension: Mark Array#reduce() as removed (commented out because native Array#reduce is used in Array#inject). [jddalton, Tobie Langel]
+
 * deprecation extension: Modify so it will run in Fuse. [jddalton]
 
 * deprecation extension: Cleanup Hash update helpers. [Tobie Langel]
